# audio2text-mistral

./: README.md  audio2text.py  audio2text_openai.py  extract_audio.py  pyproject.toml  requirements-py313.txt  run_audio2text.sh  run_extract_audio.sh  run_video2audio.sh  video2audio.py
